Early game board.

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <title>New Zealand Puzzle</title>
+        <link rel="stylesheet" href="screen.css">
     </head>
     <body>
-        <div class="board">Hello Puzzler!</div>
+        <div class="board">Loading..</div>
         <script src="puzzle.js"></script>
     </body>
 </html>
