Somewhat possible to put pieces on game board.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="screen.css">
     </head>
     <body>
-        <div class="board">Loading..</div>
+        <div class="game-board">Loading..</div>
+        <div class="game-pieces">Loading..</div>
+
         <script src="puzzle.js"></script>
     </body>
 </html>
