--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,27 @@
 <html lang="en">
     <head>
         <title>New Zealand Puzzle</title>
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
         <link rel="stylesheet" href="screen.css">
     </head>
     <body>
+        <h1>New Zealand Puzzle</h1>
+
+        <p>
+            <label>Score: </label>
+            <span class="counter"></span>
+        </p>
+
+        <input class="pure-button reset-button" type="button" value="Reset" onClick="window.location.reload()">
+
         <div class="game-board">Loading..</div>
         <div class="game-pieces">Loading..</div>
+
+        <div class="instructions">
+            <h2>Instructions</h2>
+            <p>Bring pieces from the right side and place them on the board to the left.</p>
+            <p>Same color pieces cannot be touching.</p>
+        </div>
 
         <script src="puzzle.js"></script>
     </body>
