Add undo functionality.

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>New Zealand Puzzle</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
         <link rel="stylesheet" href="screen.css">
     </head>
@@ -15,6 +16,7 @@
             </p>
 
             <input class="pure-button reset-button" type="button" value="Reset" onClick="puzzle()">
+            <input class="pure-button undo-button" type="button" value="Undo">
 
             <div class="game-board">Loading..</div>
             <div class="game-pieces">Loading..</div>
