Add messages to help the user.

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,7 @@
             <div class="game-board">Loading..</div>
             <div class="game-pieces">Loading..</div>
 
-            <div class="instructions">
-                <h2>Instructions</h2>
-                <p>Select a loose piece to place it on the game board.</p>
-                <p>Same color pieces cannot touch vertically, horizontally or diagonally.</p>
-                <p>Complete the puzzle by filling the entire board.</p>
-            </div>
+            <h3 class="instructions"></h3>
 
             <footer>
                 <a href="http://snevsky.com">App by Serge Nevsky</a>
