Added emoji to summary header to be cute

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <input class="pure-button" type="button" value="Variation 2" onclick="puzzle(3)">
             </div>
             
-            <h3 class="summary">A very difficult puzzle</h3>
+            <h3 class="summary">A very difficult puzzle 🧩</h3>
             <p>
                 The New Zealand Puzzle is a laying puzzle created by 
                 <a href="https://philos.seven-c.de/Detail.asp?ARNR=6217&AG1=DK&AG=DKLP&ID=DK&ALID=880&Lang=E">
