Fix indention bug

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <h3 class="instructions"></h3>
 
-            <div>
+            <div style="clear:both;">
                 <input class="pure-button" type="button" value="Original" onclick="puzzle(1)">
                 <input class="pure-button" type="button" value="Variation 1" onclick="puzzle(2)">
                 <input class="pure-button" type="button" value="Variation 2" onclick="puzzle(3)">
