--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>New Zealand Puzzle</title>
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
-        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+        <link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.6.0/pure-min.css">
         <link rel="stylesheet" href="screen.css">
     </head>
     <body onload="puzzle(1)">
@@ -39,7 +39,7 @@
         </div>
         
         <footer>
-            <a href="http://snevsky.com">App by Serge Nevsky</a>
+            <a href="https://snevsky.com">App by Serge Nevsky</a>
         </footer>
 
         <script src="puzzle.js"></script>
