--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>New Zealand Puzzle</title>
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
-        <link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+        <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
         <link rel="stylesheet" href="screen.css">
     </head>
     <body onload="puzzle(1)">
